--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Chào cái bàn</h1>
-    <h2>Sửa lần 1</h2>
+    <p>Chúng ta sử dụng thẻ h1 làm tiêu đề</p>
   </body>
 </html>
