--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Chào cái bàn</h1>
-    <p>Chúng ta sử dụng thẻ h1 làm tiêu đề</p>
+    <p>Chúng ta sử dụng thẻ &lt;h1&gt;&lt;h1&gt; làm tiêu đề</p>
+    <p>&copy;</p>
   </body>
 </html>
