--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <h1>Chào cái bàn</h1>
     <p>Chúng ta sử dụng thẻ &lt;h1&gt;&lt;h1&gt; làm tiêu đề</p>
     <p>&copy;</p>
+    <pre>Quanh năm     buôn bán non     sông</pre>
+    <pre><code>
+  &lt;head&gt;
+    &lt;meta charset=&quot;UTF-8&quot; /&gt;
+    &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot; /&gt;
+    &lt;title&gt;Happy Birth Day&lt;/title&gt;
+  &lt;/head&gt;
+    </code></pre>
   </body>
 </html>
